# VetCare-Voting

./: README.md
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  talwind.config.js
