[package]
name = "veteriner-oylama"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.4.0"

[dev-dependencies]
soroban-sdk = { version = "21.4.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "veteriner-oylama"
path = "src/main.rs"